fix: prevent button from overflowing container on moblie

--- a/static/style.css
+++ b/static/style.css
@@ -14,7 +14,7 @@
 }
 
 .movie {
-  height: 470px;
+  height: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
